# fun

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  func_types.h  function.h  function_utils.h  functional.h  main.cpp
example/: CMakeLists.txt  curry.cpp  guess.cpp  match.cpp  member_pointers.cpp  overload.cpp
include/: fun.hpp  functional.hpp
include/fun/: any.hpp  class_wrapper.hpp  curry.hpp  function.hpp  function_traits.hpp  functional_traits.hpp  literals.hpp  member_pointer.hpp  nullsink.hpp  overload.hpp  sink.hpp  traits.hpp  utility.hpp  with_arity.hpp
include/functional/: class_wrapper.hpp  curry.hpp  function.hpp  function_class_wrapper.hpp  functional_traits.hpp  overload.hpp  overloaded.hpp
test/: CMakeLists.txt  curry_tests.cpp  literals_tests.cpp  overload_tests.cpp  traits_tests.cpp  with_arity_tests.cpp
