cmake_minimum_required(VERSION 3.16)
project(fun LANGUAGES VERSION 2.0 CXX)

set(PROJECT_DESCRIPTION "Small C++ functional programming playground.")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_COMPILER cc)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (MSVC)
    add_compile_options(/W4)
    if (CMAKE_BUILD_TYPE MATCHES Debug)
        add_compile_options(/Od)
    else()
        add_compile_options(/O2)
    endif()
else()
    add_compile_options(-Wall -Wextra -Wpedantic -Wuninitialized -Wshadow -Wunused)
    if (CMAKE_BUILD_TYPE MATCHES Debug)
        add_compile_options(-Og)
    else()
        add_compile_options(-O3)
    endif()
endif()

include_directories(include)
add_executable(main main.cpp)